Reduce size of some images so GitHub pages allows index.html to be used

--- a/index.html
+++ b/index.html
@@ -375,13 +375,13 @@
 						<img src="images/uber_get-moving.png">
 					</div>
 					<div class="phone">
-						<img src="images/uber_map.png">
+						<img src="images/uber_map.jpg">
 					</div>
 				</div>
 				<div>
 					<img class="logo" src="images/spotify-logo.svg">
 					<div class="laptop">
-						<img src="images/spotify.png">
+						<img src="images/spotify.jpg">
 					</div>
 				</div>
 				<div>
