--- a/index.html
+++ b/index.html
@@ -408,6 +408,9 @@
 				scroll-behavior: smooth;
 				scroll-snap-type: y mandatory;
 			}
+			#section-4 .examples::-webkit-scrollbar {
+				display: none;
+			}
 			#section-4 .examples > div {
 				margin-bottom: 5vw;
 				display: flex;
