Add some features

--- a/index.html
+++ b/index.html
@@ -477,9 +477,11 @@
 
 		<section id="section-5">
 			<div class="features">
+				<div data-browsers="chrome firefox safari"> Add to Home Screen </div>
+				<div data-browsers="chrome">                beforeinstallprompt </div>
 				<div data-browsers="chrome firefox safari"> Accelerometer & Gyroscope </div>
-				<div data-browsers="chrome firefox safari"> Notch-aware CSS </div>
 				<div data-browsers="chrome firefox safari"> WebRTC data channels </div>
+				<div data-browsers="chrome firefox safari"> Notch-aware CSS </div>
 				<div data-browsers="chrome firefox safari"> Pointer events </div>
 				<div data-browsers="chrome firefox"       > Push notifications </div>
 				<div data-browsers="chrome firefox"       > HTTP/3 </div>
